<resources>
    <string name="app_name">MAD Lab Exam</string>
    <string name="start">Let’s get started</string>
    <string name="term1">Plant Your Dreams</string>
    <string name="term2">Begin Your Green Journey Now!</string>
    <string name="term3">Let’s plant with us</string>
    <string name="term4">Bring nature home</string>
    <string name="term5">Discover the perfect platform</string>
    <string name="term6"> to buy and sell your treasures</string>
    <string name="term7">effortlessly with us!</string>
    <string name="img_description1">img</string>
    <string name="login">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create an Account</string>
    <string name="name">Enter Your Name</string>
    <string name="address">Enter Your Address</string>
    <string name="phone">Enter Your Contact Number</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Enter Your Password</string>
    <string name="re_password">Re-enter Your Password</string>
    <string name="terms">Agree with terms and conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="account">Dont have an account yet?</string>
    <string name="f_Password">Forget Password</string>
    <string name="n_password">New Password</string>
    <string name="p_descrip">Your new password should be different
      from your previous password.</string>
    <string name="pass_word">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="cn_password">Create New Password</string>
    <string name="search">Search here.....</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="garden">Garden</string>
    <string name="a1">Monstera Plant|Indoor</string>
    <string name="a2">Alovera Plant|Indoor</string>
    <string name="a3">Cast Iron Plant|Indoor</string>
    <string name="a4">Lemon Tree|Outdoor</string>
    <string name="a5">Bamboo Tree|Outdoor</string>
    <string name="a6">Fergie Plant|Outdoor</string>
    <string name="i1">MONSTERA PLANT</string>
    <string name="ip1">Rs.3500.00</string>
    <string name="i2">CAST IRON PLANT</string>
    <string name="ip2">Rs.2500.00</string>
    <string name="i3">ALOVERA PLANT</string>
    <string name="ip3">Rs.1900.00</string>
    <string name="i4">SNAKE PLANT</string>
    <string name="ip4">Rs.3200.00</string>
    <string name="o1">LEMON TREE</string>
    <string name="op1">Rs.2900.00</string>
    <string name="o2">BAMBOO TREE</string>
    <string name="op2">Rs.4800.00</string>
    <string name="o3">MAE PLANT</string>
    <string name="op3">Rs.4200.00</string>
    <string name="o4">FERGIE PLANT</string>
    <string name="op4">Rs.2500.00</string>
    <string name="g1">BEGONIA</string>
    <string name="gp1">Rs.1700.00</string>
    <string name="g2">PAINTED LEAF</string>
    <string name="gp2">Rs.2800.00</string>
    <string name="g3">ELATIOR</string>
    <string name="gp3">Rs.4800.00</string>
    <string name="g4">POLKA DOT</string>
    <string name="gp4">Rs.4100.00</string>
    <string name="details">Plant Details</string>
    <string name="d0">Name:Aloe Vera</string>
    <string name="d1">Size:12 to 24 inches tall</string>
    <string name="d2">Water:Water deeply, but not too often</string>
    <string name="d3">Fertilize:Aloes generally do not require fertilizing.</string>
    <string name="d4">Price: Rs. 1900.00</string>
    <string name="qty">Qty 02 pcs</string>
    <string name="price">Rs.3800.00</string>
    <string name="qty2">Qty 01 pcs</string>
    <string name="order1">No of items : 3</string>
    <string name="order2">Item Total : Rs.5500.00</string>
    <string name="order3">Delivery charge : Rs.950.00</string>
    <string name="order4">Total cost : Rs. 6450.00</string>
    <string name="order5">Order Date: 24/02/2024</string>
    <string name="pmethos">Payment Methods</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="ccard">Credit Card</string>
    <string name="dcard">Debit Card</string>
    <string name="pay">Confirm To Payment</string>
    <string name="pay2">Proceed To Payment</string>
    <string name="addtocart">Add To Cart</string>
    <string name="yourorder">Your Order</string>
    <string name="proceed">Proceed</string>
    <string name="namee">Name with initials</string>
    <string name="num">Card Number</string>
    <string name="edate">Expiry Date</string>
    <string name="ccv">CCV</string>
    <string name="cdetails">Add Card</string>
    <string name="payment">Payment</string>
    <string name="success">Payment Successful</string>
    <string name="thanks">Thank you for your purchase</string>
    <string name="vorder">View Order</string>
    <string name="profile">Profile</string>
    <string name="cname">Name :</string>
    <string name="cname2">Vithanage N.V.P.M</string>
    <string name="caddress">Address :</string>
    <string name="caddress2">47/A,Kadana Road,Mirigama</string>
    <string name="cphone">Contact Number :</string>
    <string name="cphone2">0763457891</string>
    <string name="cemail">Email :</string>
    <string name="cemail2">vithananv@gmail.com</string>
    <string name="cpassword">Password :</string>
    <string name="cpassword2">******</string>
    <string name="orders">Orders</string>
    <string name="setting">Settings</string>
    <string name="my_orders">My Orders</string>
    <string name="all">All</string>
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>
    <string name="plant1">Monstera Plant</string>
    <string name="indoor1">Indoor | Qty 02 pcs</string>
    <string name="price1">Rs.7000.00</string>
    <string name="plant2">Alovera Plant</string>
    <string name="indoor2">Indoor | Qty 01 pcs</string>
    <string name="price2">Rs.1900.00</string>
    <string name="plant3">Cast Iron Plant</string>
    <string name="indoor3">Indoor | Qty 01 pcs</string>
    <string name="price3">Rs.2500.00</string>
    <string name="summary">Review Summary</string>
    <string name="review">Reviews and Ratings</string>
    <string name="reviews">Reviews</string>
    <string name="neww">Newest</string>
    <string name="monthago">1 month ago</string>
    <string name="lorem">loremloremloremloremloremloremloremloremloremloremloremloremloremlor
        emloremloremloremloremloremloremloremloremloremloremloremloremloremloremloremloremlor
        emloremloremloremloremloremlorem</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>