<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page18">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35">

        <ImageView
            android:id="@+id/v1"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_home_24" />

        <ImageView
            android:id="@+id/v2"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_add_shopping_cart_24" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_add_box_24" />

        <ImageView
            android:id="@+id/v3"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_add_comment_24" />

        <ImageView
            android:id="@+id/v4"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_account_circle_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout17"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn30"
            android:layout_width="118dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green1"
            android:text="@string/orders"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn35"
            android:layout_width="118dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green1"
            android:text="@string/payment"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button12"
            android:layout_width="118dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:backgroundTint="@color/green1"
            android:text="@string/setting"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView77"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:text="@string/profile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="150dp"
        android:layout_height="147dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView77"
        app:srcCompat="@drawable/img20" />

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/cname2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView30" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout17">

        <TextView
            android:id="@+id/textView79"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cname"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/cname2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView80"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caddress"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/caddress2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView81"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cphone"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/cphone2" />

        <TextView
            android:id="@+id/textView82"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cemail"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/cemail2" />

        <TextView
            android:id="@+id/textView83"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpassword"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/cpassword2"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>