<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Page14">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35">

        <ImageView
            android:id="@+id/v1"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_home_24" />

        <ImageView
            android:id="@+id/v2"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_add_shopping_cart_24" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_add_box_24" />

        <ImageView
            android:id="@+id/v3"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_add_comment_24" />

        <ImageView
            android:id="@+id/v4"
            android:layout_width="26dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_account_circle_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/yourorder"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn37"
        android:layout_width="361dp"
        android:layout_height="54dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/green1"
        android:text="@string/pay2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout19" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="159dp"
        android:layout_height="190dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="206dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView57"
        app:srcCompat="@drawable/img6" />

    <LinearLayout
        android:id="@+id/linearLayout18"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toBottomOf="@+id/textView57">

        <TextView
            android:id="@+id/textView86"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView87"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indoor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView88"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qty"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView89"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="158dp"
        android:layout_height="228dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView31"
        app:srcCompat="@drawable/img14" />

    <LinearLayout
        android:id="@+id/linearLayout20"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView32"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout18">

        <TextView
            android:id="@+id/textView90"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/g1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView91"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outdoor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView92"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qty2"
            android:textColor="@color/gray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView93"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gp1"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout19"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView32">

        <TextView
            android:id="@+id/textView94"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView95"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order2"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView96"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order3"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView97"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order4"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/barrow"
        android:layout_width="39dp"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="74dp"
        app:layout_constraintEnd_toStartOf="@+id/textView57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_arrow_circle_left_24" />

</androidx.constraintlayout.widget.ConstraintLayout>